Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -8,7 +8,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32820897"
       },
-      "description": "Genres: Action, Adventure, Drama, Supernatural\nTags:War/Demons/Male Protagonist/Swordplay/Revenge/Dungeon/Shounen/Curses/Super Power\n<i>The All-Out War Begins.</i>\n\n<br><br>\nPart 1 of the theatrical trilogy adaptation of the Infinity Castle Arc."
+      "description": "Genres: Action, Adventure, Drama, Supernatural\nTags:War/Demons/Male Protagonist/Swordplay/Revenge/Dungeon/Shounen/Curses/Super Power/Gore\n<i>The All-Out War Begins.</i>\n\n<br><br>\nPart 1 of the theatrical trilogy adaptation of the Infinity Castle Arc."
     },
     {
       "id": "tt30472557",
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt30472557"
       },
-      "description": "Genres: Action, Drama, Supernatural\nTags:Demons/Monster Boy/Male Protagonist/Urban Fantasy/Gore/Body Horror/Urban/Anti-Hero/Shounen/Henshin/Heterosexual\nTheatrical follow-up to <i>Chainsaw Man</i>.<br><br>\nDenji became “Chainsaw Man”, a boy with a devil’s heart, and is now part of Special Division 4’s devil hunters. After a date with Makima, the woman of his dreams, Denji takes shelter from the rain. There he meets Reze, a girl who works in a café.<br><br>\n\n(Source: MAPPA CHANNEL)\n\n"
+      "description": "Genres: Action, Drama, Supernatural\nTags:Demons/Monster Boy/Male Protagonist/Urban Fantasy/Body Horror/Gore/Urban/Anti-Hero/Shounen/Henshin/Heterosexual\nTheatrical follow-up to <i>Chainsaw Man</i>.<br><br>\nDenji became “Chainsaw Man”, a boy with a devil’s heart, and is now part of Special Division 4’s devil hunters. After a date with Makima, the woman of his dreams, Denji takes shelter from the rain. There he meets Reze, a girl who works in a café.<br><br>\n\n(Source: MAPPA CHANNEL)\n\n"
     },
     {
       "id": "tt32600395",
@@ -28,7 +28,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32600395"
       },
-      "description": "Genres: Drama, Sports\nTags:Athletics/Coming of Age/Rotoscoping/Outdoor Activities/Fitness/Male Protagonist/Shounen\n<i>100 METERS</i> follows Togashi, a track star who is born to run. As a kid, he is naturally gifted and wins every 100-meter race without effort. But in sixth grade, he meets Komiya, a transfer student who is full of determination but lacks technique. In teaching him, Togashi gives Komiya a new purpose: to win no matter what. Years pass by, and Togashi and Komiya meet again as rivals on the track and reveal their true selves.\n<br><br>\n(Source: GKIDS)"
+      "description": "Genres: Drama, Sports\nTags:Rotoscoping/Coming of Age/Athletics/Outdoor Activities/Shounen/Male Protagonist/Fitness\n<i>100 METERS</i> follows Togashi, a track star who is born to run. As a kid, he is naturally gifted and wins every 100-meter race without effort. But in sixth grade, he meets Komiya, a transfer student who is full of determination but lacks technique. In teaching him, Togashi gives Komiya a new purpose: to win no matter what. Years pass by, and Togashi and Komiya meet again as rivals on the track and reveal their true selves.\n<br><br>\n(Source: GKIDS)"
     },
     {
       "id": "tt33526371",
@@ -38,15 +38,15 @@
       "behaviorHints": {
         "defaultVideoId": "tt33526371"
       },
-      "description": "Genres: Fantasy\nTags:Isekai/Coming of Age/Mythology\nA story of two people in search of a new life, who leave their birthplaces - travelling to a whole different world trying to find a place where they truly belong. Set in the fictional world of Euthania, a land rich in nature with various magical races based on South East Asian Mythology, which is connected to Japan via a warp gate.<br><br>\n\n(Source: Official Trailer)"
+      "description": "Genres: Fantasy\nTags:Isekai/Urban Fantasy/Coming of Age/Female Protagonist/Mythology/Male Protagonist\nA story of two people in search of a new life, who leave their birthplaces - travelling to a whole different world trying to find a place where they truly belong. Set in the fictional world of Euthania, a land rich in nature with various magical races based on South East Asian Mythology, which is connected to Japan via a warp gate.<br><br>\n\n(Source: Official Trailer)"
     },
     {
-      "id": "tt34881132",
+      "id": "tt35487769",
       "type": "movie",
       "name": "Fushigi ‌no ‌Kuni ‌de ‌Alice to: Dive ‌in ‌Wonderland",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186181-m4vTJnKuYqje.png",
       "behaviorHints": {
-        "defaultVideoId": "tt34881132"
+        "defaultVideoId": "tt35487769"
       },
       "description": "Genres: Fantasy\nTags:Female Protagonist/Fairy Tale/Isekai\n<i>I'm supposed to be reading the air so I don't screw up,<br>\nI'm doing what everyone else is doing,<br>\nWhy can't I get things done?</i><br><br>\n\nRise Azumino, a university student, was lost in her life,<br>\nOne day, guided by an invitation letter left behind by her late grandmother, she enters “Wonderland\".<br>\nThere she meets a girl named Alice and they begin their journey together.<br><br>\n\nRise meets the White Rabbit, the Caterpillar, the Queen of Hearts, the Trumpeter, the Mad Hatter and the March Hare, Humpty Dumpty, the twins Tweedle Dum and Tweedle Dee, the Cheshire Cat and ......<br>\nThe residents of Wonderland appear one after another in front of Rise!<br>\nAnd the crazy commotion that ensues!<br>\nWhat kind of future will Rise choose in this crazy adventure with Alice?<br><br>\n\nThis adventure will surely bring a smile to your face tomorrow!<br><br>\n(Source: Official Site, Translated)"
     },
@@ -88,7 +88,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36592995"
       },
-      "description": "Genres: Slice of Life\nTags:Anthropomorphism/Iyashikei/Animals/Urban/War\nKozame-chan's everyday life is full of fun and excitement! This time, the next destination is the big city. What awaits Kozame-chan is an unfamiliar place, and new friends. A big adventure filed with tiny miracles is about to begin.\n<br><br>\n(Source: Youtube)\n<br><br>\n<i>Note: The film receives an early premiere at the Tokyo International Shark Film Festival on August 3, 2025.</i>"
+      "description": "Genres: Slice of Life\nTags:Iyashikei/Urban/Animals/Anthropomorphism/War\nKozame-chan's everyday life is full of fun and excitement! This time, the next destination is the big city. What awaits Kozame-chan is an unfamiliar place, and new friends. A big adventure filed with tiny miracles is about to begin.\n<br><br>\n(Source: Youtube)\n<br><br>\n<i>Note: The film receives an early premiere at the Tokyo International Shark Film Festival on August 3, 2025.</i>"
     },
     {
       "id": "tt35009463",
@@ -108,7 +108,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36270843"
       },
-      "description": "Genres: Music, Sports\nTags:Idol/Ice Skating/Primarily Male Cast/CGI\nThis time King of Prism is \"Prism☆Tours\"! Shin Ichijou and the other six members of SePTENTRION will travel across time and worlds in a time machine to the origins of Prism Shows. \n<br><br>\nIt will cross the boundaries of the series and intertwine with the worlds of the \"Pretty Rhythm\" series, \"PriPara\" series , \"Kiratto Pri☆Chan\", and \"Waccha PriMagi!\" to deliver a sparkling Prism☆Tours.\n<br><br>\nFated boy meets boy, our worlds are now connected by the prism's sparkle!\n<br><br>\n(Source: Official Website, translated)"
+      "description": "Genres: Music, Sports\nTags:Idol/Ice Skating/CGI/Primarily Male Cast\nThis time King of Prism is \"Prism☆Tours\"! Shin Ichijou and the other six members of SePTENTRION will travel across time and worlds in a time machine to the origins of Prism Shows. \n<br><br>\nIt will cross the boundaries of the series and intertwine with the worlds of the \"Pretty Rhythm\" series, \"PriPara\" series , \"Kiratto Pri☆Chan\", and \"Waccha PriMagi!\" to deliver a sparkling Prism☆Tours.\n<br><br>\nFated boy meets boy, our worlds are now connected by the prism's sparkle!\n<br><br>\n(Source: Official Website, translated)"
     }
   ]
 }
