Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -31,14 +31,14 @@
       "description": "Genres: Drama, Sports\nTags:Rotoscoping/Coming of Age/Athletics/Outdoor Activities/Shounen/Male Protagonist/Fitness\n<i>100 METERS</i> follows Togashi, a track star who is born to run. As a kid, he is naturally gifted and wins every 100-meter race without effort. But in sixth grade, he meets Komiya, a transfer student who is full of determination but lacks technique. In teaching him, Togashi gives Komiya a new purpose: to win no matter what. Years pass by, and Togashi and Komiya meet again as rivals on the track and reveal their true selves.\n<br><br>\n(Source: GKIDS)"
     },
     {
-      "id": "tt33526371",
+      "id": "tt37529048",
       "type": "movie",
       "name": "bâan: The Boundaries of Adulthood",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195494-2siDsNQmaKym.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt33526371"
+        "defaultVideoId": "tt37529048"
       },
-      "description": "Genres: Fantasy\nTags:Isekai/Urban Fantasy/Coming of Age/Female Protagonist/Mythology/Male Protagonist\nA story of two people in search of a new life, who leave their birthplaces - travelling to a whole different world trying to find a place where they truly belong. Set in the fictional world of Euthania, a land rich in nature with various magical races based on South East Asian Mythology, which is connected to Japan via a warp gate.<br><br>\n\n(Source: Official Trailer)"
+      "description": "Genres: Fantasy\nTags:Isekai/Urban Fantasy/Coming of Age/Mythology/Female Protagonist/Male Protagonist\nA story of two people in search of a new life, who leave their birthplaces - travelling to a whole different world trying to find a place where they truly belong. Set in the fictional world of Euthania, a land rich in nature with various magical races based on South East Asian Mythology, which is connected to Japan via a warp gate.<br><br>\n\n(Source: Official Trailer)"
     },
     {
       "id": "tt35487769",
@@ -108,7 +108,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt36270843"
       },
-      "description": "Genres: Music, Sports\nTags:Idol/Ice Skating/CGI/Primarily Male Cast\nThis time King of Prism is \"Prism☆Tours\"! Shin Ichijou and the other six members of SePTENTRION will travel across time and worlds in a time machine to the origins of Prism Shows. \n<br><br>\nIt will cross the boundaries of the series and intertwine with the worlds of the \"Pretty Rhythm\" series, \"PriPara\" series , \"Kiratto Pri☆Chan\", and \"Waccha PriMagi!\" to deliver a sparkling Prism☆Tours.\n<br><br>\nFated boy meets boy, our worlds are now connected by the prism's sparkle!\n<br><br>\n(Source: Official Website, translated)"
+      "description": "Genres: Music, Sports\nTags:Idol/Primarily Male Cast/CGI/Ice Skating\nThis time King of Prism is \"Prism☆Tours\"! Shin Ichijou and the other six members of SePTENTRION will travel across time and worlds in a time machine to the origins of Prism Shows. \n<br><br>\nIt will cross the boundaries of the series and intertwine with the worlds of the \"Pretty Rhythm\" series, \"PriPara\" series , \"Kiratto Pri☆Chan\", and \"Waccha PriMagi!\" to deliver a sparkling Prism☆Tours.\n<br><br>\nFated boy meets boy, our worlds are now connected by the prism's sparkle!\n<br><br>\n(Source: Official Website, translated)"
     }
   ]
 }
