Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -23,7 +23,7 @@
     {
       "id": "tt37529048",
       "type": "movie",
-      "name": "bâan: The Boundaries of Adulthood",
+      "name": "bâan: The Boundary of Adulthood",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195494-2siDsNQmaKym.jpg",
       "behaviorHints": {
         "defaultVideoId": "tt37529048"
