--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -5,7 +5,7 @@
       "type": "series",
       "name": "DAN DA DAN Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185660-uB8RUMBGovGr.jpg",
-      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Youkai/Ghost/Aliens/Shounen/Primarily Teen Cast/Surreal Comedy/Urban Fantasy/Heterosexual/Female Protagonist/Male Protagonist/Artificial Intelligence/Cult/Kaiju/Tokusatsu/Exorcism/Henshin/Body Horror/Rape\nThe second season of <i>Dandadan</i>.<br><br> Okarun and Jiji have made a strange discovery, while Momo finds herself under attack! What mysterious encounters await them next?!<br><br>\n\n(Source: Netflix Anime Twitter)\n<br><br>\n<i>Notes: <br>\n- Worldwide premiere of Episodes 1-3 titled as <b>DAN DA DAN: EVIL EYE</b> before the Japanese premiere was pre-screened in advance in theaters on June 6, 2025 in North America by GKIDS Films and June 7 and 8 in Europe by Piece of Magic Entertainment and Animation Digital Network.</i>"
+      "description": "Genres: Action, Comedy, Drama, Romance, Sci-Fi, Supernatural\nTags:Youkai/Ghost/Aliens/Shounen/Primarily Teen Cast/Surreal Comedy/Urban Fantasy/Heterosexual/Female Protagonist/Male Protagonist/Artificial Intelligence/Cult/Tokusatsu/Exorcism/Henshin/Body Horror/Kaiju/Rape\nThe second season of <i>Dandadan</i>.<br><br> Okarun and Jiji have made a strange discovery, while Momo finds herself under attack! What mysterious encounters await them next?!<br><br>\n\n(Source: Netflix Anime Twitter)\n<br><br>\n<i>Notes: <br>\n- Worldwide premiere of Episodes 1-3 titled as <b>DAN DA DAN: EVIL EYE</b> before the Japanese premiere was pre-screened in advance in theaters on June 6, 2025 in North America by GKIDS Films and June 7 and 8 in Europe by Piece of Magic Entertainment and Animation Digital Network.</i>"
     },
     {
       "id": "tt15765670",
@@ -47,7 +47,7 @@
       "type": "series",
       "name": "Takopi's Original Sin",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185407-7uzY4fA3hokP.jpg",
-      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Philosophy/Primarily Child Cast/Aliens/Female Protagonist/Shapeshifting/Space/Shounen\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Philosophy/Primarily Child Cast/Aliens/Female Protagonist/Shapeshifting/Space/Shounen/POV\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt15975122",
@@ -117,7 +117,7 @@
       "type": "series",
       "name": "I Was Reincarnated as the 7th Prince so I Can Take My Time Perfecting My Magical Ability Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178090-1OOScJqXLjRd.png",
-      "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Magic/Male Protagonist/Medieval/Femboy\nThe second season of <i>Tensei Shitara Dai Nana Ouji Dattanode, Kimamani Majutsu wo Kiwamemasu</i>.\n<br><br>\nThe magic maniac returns, his next target? Holy Magic.<br><br>\n(Source: Crunchyroll  Official Trailer)"
+      "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Magic/Male Protagonist/Medieval/Femboy\nThe second season of <i>Tensei Shitara Dai Nana Ouji Dattanode, Kimamani Majutsu wo Kiwamemasu</i>.\n<br><br>\nAfter a victorious battle against Guisarme in the Lordost region, Lloyd’s pursuit of magic knows no bounds. His next goal? Holy Magic! To learn this sacred art, Lloyd and his companions visit a church, but what awaits them there…?<br><br>\n(Source: I Was Reincarnated as the 7th Prince so I Can Take My Time Perfecting My Magical Ability Official Site)"
     },
     {
       "id": "tt32991344",
@@ -187,7 +187,7 @@
       "type": "series",
       "name": "A Couple of Cuckoos Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179828-Yc1b1R2dxQyc.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Heterosexual/Male Protagonist/School/Arranged Marriage/Inseki/Shounen/Female Protagonist/Cohabitation\nThe second season of <i>Kakkou no Iinazuke</i>.<br><br>\nUmino Nagi and Amano Erika were born on the same day and swapped at birth. Nagi was raised as the son of a diner owner, and Erika the daughter of a hotel tycoon. Their parents encourage them to become engaged, and they begin life together. Soon though, infatuations arise as Nagi becomes stuck in a love quadrangle. Life and love are embroiled in epic turmoil as fate is set in motion once again!\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance\nTags:Heterosexual/Male Protagonist/Arranged Marriage/School/Inseki/Shounen/Female Protagonist/Cohabitation\nThe second season of <i>Kakkou no Iinazuke</i>.<br><br>\nUmino Nagi and Amano Erika were born on the same day and swapped at birth. Nagi was raised as the son of a diner owner, and Erika the daughter of a hotel tycoon. Their parents encourage them to become engaged, and they begin life together. Soon though, infatuations arise as Nagi becomes stuck in a love quadrangle. Life and love are embroiled in epic turmoil as fate is set in motion once again!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt36592820",
@@ -341,7 +341,7 @@
       "type": "series",
       "name": "Turkey! Time to Strike",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx159483-nQKJ2EEqoo8x.jpg",
-      "description": "Genres: Adventure, Sports, Supernatural\nTags:Female Protagonist/Bowling/Primarily Female Cast/Primarily Teen Cast/School Club/Cute Girls Doing Cute Things\n\"Turkey\" is a bowling term for scoring three consecutive strikes.\n<br><br>\nMai, a second-year student and captain of the Ikkokukan High School Bowling Club, is a genius who can't seem to win a match. Whenever she scores a Turkey, she mysteriously follows it up with an unyielding split—the Snake Eyes.\n<br><br>\nOne day, Rina, the club’s only first-year member, confronts her \"You’re doing it on purpose, aren’t you?\"\n<br><br>\n\"You’re running away from winning. But I want to win. If you have no intention of winning, I’ll quit.\"\n<br><br>\n (Source: Official Site)"
+      "description": "Genres: Adventure, Sports, Supernatural\nTags:Female Protagonist/Bowling/Primarily Female Cast/Primarily Teen Cast/School Club/Cute Girls Doing Cute Things/Coming of Age\n\"Turkey\" is a bowling term for scoring three consecutive strikes.\n<br><br>\nMai, a second-year student and captain of the Ikkokukan High School Bowling Club, is a genius who can't seem to win a match. Whenever she scores a Turkey, she mysteriously follows it up with an unyielding split—the Snake Eyes.\n<br><br>\nOne day, Rina, the club’s only first-year member, confronts her \"You’re doing it on purpose, aren’t you?\"\n<br><br>\n\"You’re running away from winning. But I want to win. If you have no intention of winning, I’ll quit.\"\n<br><br>\n (Source: Official Site)"
     },
     {
       "id": "tt36271422",
