--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -19,7 +19,7 @@
       "type": "series",
       "name": "Gachiakuta",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178025-cWJKEsZynkil.jpg",
-      "description": "Genres: Action, Drama, Fantasy\nTags:Urban Fantasy/Shounen/Dystopian/Post-Apocalyptic/Super Power/Ensemble Cast/Male Protagonist/Survival/Revenge/Urban/CGI\nA boy lives in a floating town, where the poor scrape by and the rich live a sumptuous life, simply casting their garbage off the side, into the abyss. When he’s falsely accused of murder, though, his wrongful conviction leads to an unimaginable punishment—exile off the edge, with the rest of the trash. Down on the surface, the cast-off waste of humanity has bred vicious monsters, and to travel the path to vengeance against those who cast him into Hell, a boy will have to become a warrior…\n<br><br>\n(Source: Kodansha USA)"
+      "description": "Genres: Action, Drama, Fantasy\nTags:Shounen/Urban Fantasy/Dystopian/Super Power/Post-Apocalyptic/Ensemble Cast/Male Protagonist/Revenge/Survival/Urban/CGI\nA boy lives in a floating town, where the poor scrape by and the rich live a sumptuous life, simply casting their garbage off the side, into the abyss. When he’s falsely accused of murder, though, his wrongful conviction leads to an unimaginable punishment—exile off the edge, with the rest of the trash. Down on the surface, the cast-off waste of humanity has bred vicious monsters, and to travel the path to vengeance against those who cast him into Hell, a boy will have to become a warrior…\n<br><br>\n(Source: Kodansha USA)"
     },
     {
       "id": "tt21975436",
@@ -173,7 +173,7 @@
       "type": "series",
       "name": "Dealing with Mikadono Sisters Is a Breeze",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178886-KjzSXyEB61zX.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Male Protagonist/Heterosexual/Tomboy/Shounen/Cohabitation/Female Harem/Tsundere/School/Femboy/Shogi/Martial Arts/Acting/Coming of Age\nYuu Ayase, son of a late legendary actress, is overwhelmingly mediocre. When he’s invited to stay with his mother’s friend, Yuu is shocked to find out that he’ll be living with three prodigy sisters who possess both beauty and talent…and who rule his new school as the Three Emperors. Can Yuu manage to melt the sisters’ cold hearts and fulfill his mother’s last wish for him to build a happy family?<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance\nTags:Male Protagonist/Heterosexual/Tomboy/Shounen/Cohabitation/Female Harem/Tsundere/School/Shogi/Martial Arts/Acting/Coming of Age/Femboy\nYuu Ayase, son of a late legendary actress, is overwhelmingly mediocre. When he’s invited to stay with his mother’s friend, Yuu is shocked to find out that he’ll be living with three prodigy sisters who possess both beauty and talent…and who rule his new school as the Three Emperors. Can Yuu manage to melt the sisters’ cold hearts and fulfill his mother’s last wish for him to build a happy family?<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt33050376",
@@ -285,7 +285,7 @@
       "type": "series",
       "name": "See You Tomorrow at the Food Court",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185519-cuRKYBlZ3uWw.jpg",
-      "description": "Genres: Comedy, Slice of Life\nTags:Urban/Female Protagonist/Primarily Teen Cast/Primarily Female Cast/Cute Girls Doing Cute Things/Gyaru/Video Games/Food/Surreal Comedy/Yuri/School\nMeet Wada, who gives off an unapproachable vibe, and Yamamoto, who strikes fear into those around her because of her looks. Though the two girls attend separate high schools, they meet up at a shopping center’s food court almost every day. Take a little peek at the laid-back afternoons Wada and Yamamoto share as they reflect on the ups and downs of high school life together.\n\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Slice of Life\nTags:Urban/Female Protagonist/Primarily Teen Cast/Primarily Female Cast/Cute Girls Doing Cute Things/Gyaru/Video Games/Food/Surreal Comedy/Yuri/School/Advertisement\nMeet Wada, who gives off an unapproachable vibe, and Yamamoto, who strikes fear into those around her because of her looks. Though the two girls attend separate high schools, they meet up at a shopping center’s food court almost every day. Take a little peek at the laid-back afternoons Wada and Yamamoto share as they reflect on the ups and downs of high school life together.\n\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt35652489",
@@ -320,7 +320,7 @@
       "type": "series",
       "name": "Hell Teacher: Jigoku Sensei Nube (2025)",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179678-1isykDVghv8Q.png",
-      "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Youkai/Demons/Exorcism/Urban Fantasy/School/Shounen/Primarily Child Cast/Episodic\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
+      "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Urban Fantasy/Youkai/Shounen/Exorcism/School/Demons/Primarily Child Cast/Episodic\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
     },
     {
       "id": "tt35995444",
