Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -33,7 +33,7 @@
       "type": "series",
       "name": "The Fragrant Flower Blooms With Dignity",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181444-Ut9DDUZdfHwg.jpg",
-      "description": "Genres: Comedy, Drama, Romance\nTags:Heterosexual/Primarily Teen Cast/Male Protagonist/Iyashikei/School/Ensemble Cast/Urban/Shounen/Female Protagonist/Food/Philosophy/Delinquents/Cute Girls Doing Cute Things\nChidori High is a boys’ school that takes in the dregs of society with the lowest grades. Next door stands Kikyo Girls’ High, where the wealthy, high-class families send their precious daughters. Chidori second-year Rintaro, who has a fierce face but a gentle heart, is helping at his family’s patisserie when he meets a girl named Kaoruko. The two hit it off right away…but this blissful peace is quickly disturbed when Rintaro discovers that Kaoruko is actually a student at Kikyo. Worse, she doesn’t seem to realize what a huge problem this really is! Will these two be able to forge a path for themselves, and sidestep the traps (metaphorical and literal) laid by their classmates?\n<br><br>\n(Source: Kodansha USA)"
+      "description": "Genres: Comedy, Drama, Romance\nTags:Heterosexual/Primarily Teen Cast/Male Protagonist/Iyashikei/School/Ensemble Cast/Urban/Shounen/Female Protagonist/Food/Philosophy/Delinquents\nChidori High is a boys’ school that takes in the dregs of society with the lowest grades. Next door stands Kikyo Girls’ High, where the wealthy, high-class families send their precious daughters. Chidori second-year Rintaro, who has a fierce face but a gentle heart, is helping at his family’s patisserie when he meets a girl named Kaoruko. The two hit it off right away…but this blissful peace is quickly disturbed when Rintaro discovers that Kaoruko is actually a student at Kikyo. Worse, she doesn’t seem to realize what a huge problem this really is! Will these two be able to forge a path for themselves, and sidestep the traps (metaphorical and literal) laid by their classmates?\n<br><br>\n(Source: Kodansha USA)"
     },
     {
       "id": "tt33028568",
@@ -47,7 +47,7 @@
       "type": "series",
       "name": "Takopi's Original Sin",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185407-7uzY4fA3hokP.jpg",
-      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Philosophy/Primarily Child Cast/Aliens/Female Protagonist/Shapeshifting/POV/Space/Rural/Shounen\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Philosophy/Primarily Child Cast/Aliens/Female Protagonist/Shapeshifting/Space/POV/Rural/Shounen\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt15975122",
@@ -82,7 +82,7 @@
       "type": "series",
       "name": "Dr. STONE SCIENCE FUTURE Cour 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx189117-EJQHOFjLoK2k.png",
-      "description": "Genres: Action, Adventure, Comedy, Sci-Fi\nTags:Shounen/Male Protagonist/Post-Apocalyptic/Foreign/Ensemble Cast/Educational/Survival/Ships\nThe second cour of the fourth season of <i>Dr.STONE</i>.<br><br>\n"
+      "description": "Genres: Action, Adventure, Comedy, Sci-Fi\nTags:Shounen/Male Protagonist/Post-Apocalyptic/Foreign/Ensemble Cast/Educational/Survival/Ships/Travel\nThe second cour of the fourth season of <i>Dr.STONE</i>.<br><br>\n"
     },
     {
       "id": "tt36592736",
@@ -96,7 +96,7 @@
       "type": "series",
       "name": "Grand Blue Dreaming Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182309-tThxqSRn3At1.jpg",
-      "description": "Genres: Comedy, Slice of Life, Sports\nTags:College/Seinen/School Club/Nudity/Coastal/Male Protagonist/Scuba Diving/Slapstick/Otaku Culture/Surreal Comedy\nThe second season of <i>Grand Blue</i>.<br><br>\n\nUniversity is back in session for Iori, and so are the booze-fueled parties! Between diving club shenanigans, a surprise from his sister, and wild tests of courage, normal college life is anything but. Dive back into the madness with Iori and his beloved crew of lively splash artists.<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Slice of Life, Sports\nTags:Seinen/College/Otaku Culture/School Club/Coastal/Male Protagonist/Nudity/Slapstick/Scuba Diving/Surreal Comedy/Primarily Adult Cast/Ensemble Cast\nThe second season of <i>Grand Blue</i>.<br><br>\n\nUniversity is back in session for Iori, and so are the booze-fueled parties! Between diving club shenanigans, a surprise from his sister, and wild tests of courage, normal college life is anything but. Dive back into the madness with Iori and his beloved crew of lively splash artists.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt33317800",
@@ -117,14 +117,14 @@
       "type": "series",
       "name": "Clevatess",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178869-qiEz0gQD8H5N.png",
-      "description": "Genres: Action, Drama, Fantasy\nTags:Medieval/Revenge/Magic/Parenthood/Monster Boy/Demons/Adoption/Anti-Hero/Swordplay/Found Family/Slavery/Gore/Shapeshifting/Primarily Adult Cast\nThe story centers on the the titular Clevatess, the lord of Dark Beasts, who wields both uncanny intellect and destructive power. Frustrated by the 13 heroes tasked to destroy him, he has decided to be rid of humanity once and for all. However, he has been charged with one nuisance: he revived a hero he personally slayed and adopts an orphaned humanoid baby—the last hope to save a dying world. The world stands upon the brink of Armageddon, with the obligation of raising one child holding it all back. Now bound together, what fate awaits this unlikely trio?<br>\n<br>\n(Source: Anime News Network, Crunchyroll, edited)"
+      "description": "Genres: Action, Drama, Fantasy\nTags:Medieval/Demons/Adoption/Revenge/Magic/Parenthood/Monster Boy/Swordplay/Anti-Hero/Slavery/Primarily Adult Cast/Gore/Found Family/Shapeshifting\nThe story centers on the the titular Clevatess, the lord of Dark Beasts, who wields both uncanny intellect and destructive power. Frustrated by the 13 heroes tasked to destroy him, he has decided to be rid of humanity once and for all. However, he has been charged with one nuisance: he revived a hero he personally slayed and adopts an orphaned humanoid baby—the last hope to save a dying world. The world stands upon the brink of Armageddon, with the obligation of raising one child holding it all back. Now bound together, what fate awaits this unlikely trio?<br>\n<br>\n(Source: Anime News Network, Crunchyroll, edited)"
     },
     {
       "id": "tt31624309",
       "type": "series",
       "name": "I Was Reincarnated as the 7th Prince so I Can Take My Time Perfecting My Magical Ability Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178090-1OOScJqXLjRd.png",
-      "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Magic/Male Protagonist/Medieval/Femboy\nThe second season of <i>Tensei Shitara Dai Nana Ouji Dattanode, Kimamani Majutsu wo Kiwamemasu</i>.\n<br><br>\nAfter a victorious battle against Guisarme in the Lordost region, Lloyd’s pursuit of magic knows no bounds. His next goal? Holy Magic! To learn this sacred art, Lloyd and his companions visit a church, but what awaits them there…?<br><br>\n(Source: I Was Reincarnated as the 7th Prince so I Can Take My Time Perfecting My Magical Ability Official Site)"
+      "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Magic/Male Protagonist/Medieval/Femboy/Angels/Gore\nThe second season of <i>Tensei Shitara Dai Nana Ouji Dattanode, Kimamani Majutsu wo Kiwamemasu</i>.\n<br><br>\nAfter a victorious battle against Guisarme in the Lordost region, Lloyd’s pursuit of magic knows no bounds. His next goal? Holy Magic! To learn this sacred art, Lloyd and his companions visit a church, but what awaits them there…?<br><br>\n(Source: I Was Reincarnated as the 7th Prince so I Can Take My Time Perfecting My Magical Ability Official Site)"
     },
     {
       "id": "tt33472011",
@@ -159,7 +159,7 @@
       "type": "series",
       "name": "Rent-a-Girlfriend Season 4",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179344-GQzJfehpQI72.png",
-      "description": "Genres: Comedy, Romance\nTags:Female Harem/Male Protagonist/Female Protagonist/Heterosexual/Fake Relationship/Unrequited Love/Primarily Adult Cast/Shounen/Urban/Philosophy\nThe fourth season of <i> Kanojo, Okarishimasu</i>.<br><br>\nKazuya’s ready to confess with the lush paradise of Hawaii as a backdrop. But renting Chizuru for the dream trip turns into a war zone of love due to Ruka’s aggressive advances and Mami’s scheming. Despite the chaos, this is Kazuya’s moment to bare his heart. Will his words reach Chizuru? And if they do, what will she even say?\n<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: Kanojo, Okarishimasu 4th Season was streamed 4 days in advance of the TV broadcast on DMM TV, dAnimestore, and Crunchyroll beginning July 1, 2025. Regular broadcasting began on July 5, 2025.</i>"
+      "description": "Genres: Comedy, Romance\nTags:Female Harem/Fake Relationship/Male Protagonist/Female Protagonist/Heterosexual/Unrequited Love/Primarily Adult Cast/Shounen/Urban/Philosophy\nThe fourth season of <i> Kanojo, Okarishimasu</i>.<br><br>\nKazuya’s ready to confess with the lush paradise of Hawaii as a backdrop. But renting Chizuru for the dream trip turns into a war zone of love due to Ruka’s aggressive advances and Mami’s scheming. Despite the chaos, this is Kazuya’s moment to bare his heart. Will his words reach Chizuru? And if they do, what will she even say?\n<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: Kanojo, Okarishimasu 4th Season was streamed 4 days in advance of the TV broadcast on DMM TV, dAnimestore, and Crunchyroll beginning July 1, 2025. Regular broadcasting began on July 5, 2025.</i>"
     },
     {
       "id": "tt37113118",
@@ -236,7 +236,7 @@
       "type": "series",
       "name": "Solo Camping for Two",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185965-LlzTLSTBUbEA.jpg",
-      "description": "Genres: Slice of Life\nTags:Camping/Food/Outdoor Activities/Primarily Adult Cast/Educational/Seinen/Male Protagonist\nGen Kinokura, 34 years old.<br><br>\n\nA solitary camper who cherishes his alone time in nature, Gen enjoys his usual solo camping trips. However, he unexpectedly encounters Shizuku Kusano, a complete beginner in camping. Reluctantly, Gen ends up camping with Shizuku, despite it being the last thing he wanted to do.\n<br><br>\nWhat will become of Gen’s peaceful camping life now that it’s turned upside down by this new companion?<br><br>\n(Source: Pony Canyon)"
+      "description": "Genres: Slice of Life\nTags:Camping/Food/Outdoor Activities/Primarily Adult Cast/Educational/Seinen/Male Protagonist/Bisexual\nGen Kinokura, 34 years old.<br><br>\n\nA solitary camper who cherishes his alone time in nature, Gen enjoys his usual solo camping trips. However, he unexpectedly encounters Shizuku Kusano, a complete beginner in camping. Reluctantly, Gen ends up camping with Shizuku, despite it being the last thing he wanted to do.\n<br><br>\nWhat will become of Gen’s peaceful camping life now that it’s turned upside down by this new companion?<br><br>\n(Source: Pony Canyon)"
     },
     {
       "id": "tt36988220",
@@ -278,7 +278,7 @@
       "type": "series",
       "name": "Bad Girl",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178675-cTYMOedSpXsJ.jpg",
-      "description": "Genres: Comedy, Romance\nTags:School/Female Protagonist/Primarily Female Cast/Yuri/Cute Girls Doing Cute Things/Delinquents/Primarily Teen Cast/Urban/LGBTQ+ Themes/Female Harem/Gyaru\nYuu Yuutani is a first-year high school student with sharp eyes, large piercings and flashy two-tone hair. She's become notorious as a bad girl… but she's really not. At heart, Yuu is an incredibly good girl, but her mind is always full of thoughts of the beautiful and popular Atori Mizutori, the school’s Madonna and head of the student disciplinary committee. So, on her mission to attract the attention of Atori, Yuu decided to quit being an honor student and become a \"bad delinquent!” <br>\n<br>\n(Source: HIDIVE)"
+      "description": "Genres: Comedy, Romance\nTags:School/Female Protagonist/Primarily Female Cast/Yuri/Cute Girls Doing Cute Things/Delinquents/Primarily Teen Cast/Urban/Female Harem/LGBTQ+ Themes/Gyaru\nYuu Yuutani is a first-year high school student with sharp eyes, large piercings and flashy two-tone hair. She's become notorious as a bad girl… but she's really not. At heart, Yuu is an incredibly good girl, but her mind is always full of thoughts of the beautiful and popular Atori Mizutori, the school’s Madonna and head of the student disciplinary committee. So, on her mission to attract the attention of Atori, Yuu decided to quit being an honor student and become a \"bad delinquent!” <br>\n<br>\n(Source: HIDIVE)"
     },
     {
       "id": "tt36082234",
